// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ActionLink ActionLinkContent renders ActionLinkContent with badge if badge is provided 1`] = `
<Fragment>
  <span
    className="mb-0 mr-1 action-link-label"
  >
    Link text
  </span>
  

  <span
    className="badge badge-default"
  >
    Badge
  </span>
  

  <div>
    

  </div>
  

</Fragment>
`;

exports[`Component: ActionLink ActionLinkContent renders ActionLinkContent with link text 1`] = `
<Fragment>
  <span
    className="mb-0 mr-1 action-link-label"
  >
    Link text
  </span>
  

  <div>
    

  </div>
  

</Fragment>
`;

exports[`Component: ActionLink ActionLinkContent renders ActionLinkContent with smalltext on multiline when multiline and smalltext is provided 1`] = `
<Fragment>
  <span
    className="action-link-multiline"
  >
    

    <div>
      <div
        className="d-flex flex-row"
      >
        <span
          className="action-link-label"
        >
          Link text
        </span>
        

      </div>
      <div>
        <span
          className="small-text"
        >
          Small text
        </span>
        

      </div>
    </div>
  </span>
  

</Fragment>
`;

exports[`Component: ActionLink ActionLinkContent renders ActionLinkContent with smalltext when provided 1`] = `
<Fragment>
  <span
    className="mb-0 mr-1 action-link-label"
  >
    Link text
  </span>
  

  <div>
    <span
      className="small-text"
    >
      Small text
    </span>
    

  </div>
  

</Fragment>
`;

exports[`Component: ActionLink ActionLinkContent renders ActionLinkContent without badge if badge is not provided 1`] = `
<Fragment>
  <span
    className="mb-0 mr-1 action-link-label"
  >
    Link text
  </span>
  

  <div>
    

  </div>
  

</Fragment>
`;

exports[`Component: ActionLink ActionLinkContent renders ActionLinkContent without smalltext when not provided 1`] = `
<Fragment>
  <span
    className="mb-0 mr-1 action-link-label"
  >
    Link text
  </span>
  

  <div>
    

  </div>
  

</Fragment>
`;

exports[`Component: ActionLink prop linkText is marked as required 1`] = `
<Fragment>
  <a
    className="action-link"
    href="#"
  >
    

    <ActionLinkContent />
  </a>
</Fragment>
`;

exports[`Component: ActionLink renders ActionLink with .action-link class only when not newTab 1`] = `
<Fragment>
  <a
    className="action-link"
    href="#"
  >
    

    <ActionLinkContent
      linkText="Link text"
    />
  </a>
</Fragment>
`;

exports[`Component: ActionLink renders ActionLink with .action-link-new-tab class when newTab is true 1`] = `
<Fragment>
  <a
    className="action-link action-link-new-tab"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    

    <ActionLinkContent
      linkText="Link text"
      newTab={true}
    />
  </a>
</Fragment>
`;
